kubernetes/default/api/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
spec:
  template:
    metadata:
      labels:
        app: api
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: api
          ports:
            - containerPort: 8080
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 10
            tcpSocket:
              port: 8080
            # httpGet:
            #   path: "/_healthz"
            #   port: 8080
          livenessProbe:
            initialDelaySeconds: 15
            periodSeconds: 20
            tcpSocket:
              port: 8080
            # httpGet:
            #   path: "/_healthz"
            #   port: 8080
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
